# lantmateriet-qgis-plugin

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.cfg  sitemap.xml
.github/: labeler.yml
.github/ISSUE_TEMPLATE/: 10_bug_report.yml  config.yml
.github/workflows/: auto-labeler.yml  build-release.yml  build_release.yml  documentation.yml  linter.yml  tester.yml
api-reference/: index.html
api-reference/belagenhetsadressdirekt/: index.html
api-reference/cql2/: index.html
api-reference/fastighetochsamfallighetdirekt/: index.html
api-reference/fastighetsindelningdirekt/: index.html
api-reference/gemensamhetsanlaggningdirekt/: index.html
api-reference/registerbeteckningdirekt/: index.html
assets/javascripts/: bundle.c8b220af.min.js  bundle.f55a23d4.min.js
bidragsgivare/: index.html
changelog/: index.html
development/contribute/: index.html
development/documentation/: index.html
development/environment/: index.html
development/history/: index.html
development/packaging/: index.html
development/testing/: index.html
development/translation/: index.html
docs/: bidragsgivare.md  changelog.md  conf.py  index.md  licens.md
lantmateriet/: __about__.py  __init__.py  config.py  metadata.txt  plugin_main.py
lantmateriet_qgis/: __init__.py  metadata.txt  plugin_main.py
licens/: index.html
requirements/: development.txt  documentation.txt  packaging.txt
search/: search_index.json
stylesheets/: customization.css  trueno.css
usage/: index.html
(+102 files in other folders)
