[project]
name = "lantmateriet-qgis"
version = "1.0.1"
description = "Convenient connection to several of Lantmäteriet's services"
readme = "README.md"

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
extend-select = ["I"]

[tool.qgis-plugin-ci]
plugin_path = "lantmateriet_qgis"
project_slug = "lantmateriet-qgis-plugin"
github_organization_slug = "qgissverige"
